AVAudioSessionCaptureDeviceManager is not always computing the right default input device https://bugs.webkit.org/show_bug.cgi?id=235362 <rdar://87707090>

Reviewed by Eric Carlson.

Sometimes the defaultInput is not available, in which case it is good to resort to the previous default device if available.
This fix prevents the following case to happen:
- We start rendering WebRTC audio on some output, say AirPods
- We start capturing microphone, but the default microphone is not the AirPods one (while it probably should, this is not always the case).
- We migrate audio rendering to VPIO which will output audio to the same device as the input microphone if feasible (typically builtin speaker).
- Audio is now flowing on builtin speaker instead of AirPods.

Manually tested.

* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.h:
* platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.mm:



Canonical link: https://commits.webkit.org/246213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288275 268f45cc-cd09-0410-ab3c-d52691b4dbfc